Fix logo alignment after font change

--- a/styles/resume.less
+++ b/styles/resume.less
@@ -43,7 +43,7 @@
     letter-spacing: 0.03em;
 
     @media print, (min-width: @screen-lg-min) {
-      margin-bottom: -4px; // text alignment adjustments
+      margin-bottom: -6px; // text alignment adjustments
     }
 
     a {
